correct margins and alignments for productName and price.

--- a/src/styles/ProductDetails.module.scss
+++ b/src/styles/ProductDetails.module.scss
@@ -57,6 +57,7 @@ $product-disabled-color: #aaa;
     display: flex;
     gap: 10px;
     align-items: center;
+    margin-bottom: 5px;
 
     .currentPrice {
       font-weight: bold;
@@ -73,7 +74,7 @@ $product-disabled-color: #aaa;
     }
   }
 
-  .price-info {
+  .priceInfo {
     font-size: 12px;
     color: $product-accent-color;
     margin: 5px 0 20px;
